# edms-assistant

./: .env  LICENSE  README.md  docker-compose.yml  download_openapi.py  main.py  openapi_spec.json  pyproject.toml  run.py
backend/: .env  main.py  models.py  rag_graph_advanced.py  requirements.txt  schemas.py  settings.py
backend/routes/: auth.py  chat.py  files.py
cli/: faisss.py  main.py  rag.py
cli/doc/: Руководство_по_EDMS.doc  СЭД.docx
cli/vector/: index.faiss
data/documents/: narabotki.docx
docker/: Dockerfile  docker-compose.yml
edms-assistant-ui/: index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js
edms-assistant-ui/src/: App.tsx  main.tsx
edms-assistant-ui/src/components/: AuthForm.tsx  ClarificationModal.tsx  FileUploader.tsx  HITLModal.tsx  MessageBubble.tsx
edms-assistant-ui/src/hooks/: useChat.ts
edms-assistant-ui/src/utils/: api.ts
frontend/: create-config.js  index.html  package.json  postcss.config.cjs  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/api/: assistantApi.js
frontend/src/comp/: ChatWindow.jsx  FileUploader.jsx  Sidebar.jsx
frontend/src/components/: AssistantEyes.jsx  AssistantWidget.jsx  ConfirmDialog.jsx  ParticleEffect.jsx  c.js  ss.jsx
src/edms_assistant/: Dockerfile  docker-compose.yml  main.py
src/edms_assistant/agents/: ag.py  agent.py  agent_factory.py  attachment_agent.py  base_agent.py  document_agent.py  employee_agent.py  main_planner_agent.py  main_router_agent.py
src/edms_assistant/api/routes/: chat.py  files.py
src/edms_assistant/config/: db.py  settings.py
src/edms_assistant/core/: agent_registry.py  base_agent.py  check_redis.py  document_indexer.py  graph.py  nlu_classifier.py  nodes.py  rag_retriever.py  redis_client.py  registry.py  security.py  settings.py  state.py
src/edms_assistant/core/agents/: attachment_agent.py  document_agent.py  employee_agent.py
src/edms_assistant/core/middleware/: hitl_middleware.py
src/edms_assistant/core/nlu/: intent_classifier.py
src/edms_assistant/core/orchestrator/: orchestrator.py
src/edms_assistant/core/state/: global_state.py
src/edms_assistant/core/tools/: add_responsible_tool.py  attachment_tool.py  document_tool.py  employee_tool.py  get_employee_by_id_tool.py
src/edms_assistant/graph/: graph.py  nodes.py  state.py
src/edms_assistant/infrastructure/api_clients/: attachment_client.py  doc  document_client.py  employee_client.py
src/edms_assistant/infrastructure/checkpointer/: postgres_checkpointer.py
src/edms_assistant/infrastructure/llm/: llm.py
src/edms_assistant/infrastructure/observability/: tracing.py
src/edms_assistant/infrastructure/security/: execution_service.py
src/edms_assistant/presentation/: api.py
src/edms_assistant/presentation/auth/: jwt_auth.py
src/edms_assistant/rag/: graph.py  hybrid_search.py  indexer.py  loader.py  retriever.py  router.py
src/edms_assistant/state/: state.py
src/edms_assistant/tools/: __init__.py  attachment.py  attachment_tools.py  base.py  document.py  document_tools.py  employee.py  factory.py  file_processing.py  tool_registry.py
src/edms_assistant/utils/: api_utils.py  auth.py  file_utils.py  logging.py  retry_utils.py
srccc/edms_assistant/agents/: agent.py  agent_factory.py  attachment_agent.py  base_agent.py  document_agent.py  employee_agent.py  main_planner_agent.py
srccc/edms_assistant/config/: db.py
srccc/edms_assistant/core/: agent_registry.py  document_indexer.py  graph.py  nlu_classifier.py  nodes.py  rag_retriever.py  security.py  state.py
srccc/edms_assistant/infrastructure/: resources_openapi.py
srccc/edms_assistant/infrastructure/api_clients/: attachment_client.py  document_client.py  employee_client.py
srccc/edms_assistant/infrastructure/checkpointer/: postgres_checkpointer.py
srccc/edms_assistant/infrastructure/llm/: llm.py
srccc/edms_assistant/presentation/: api.py
srccc/edms_assistant/tools/: __init__.py  attachment.py  document.py  employee.py  tool_registry.py
srccc/edms_assistant/utils/: api_utils.py  auth.py  file_utils.py  logging.py  retry_utils.py
tests/: test_agents.py
