[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "edms-assistant"
version = "0.1.0"
description = "AI-агент для интеграции с электронной системой управления документами (EDMS)"
authors = [{ name = "Your Name", email = "you@example.com" }]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.14,<4.0.0"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langgraph>=0.2.0",
    "langgraph-checkpoint-sqlite>=0.1.0",
    "langgraph-checkpoint-postgres>=0.1.0",
    "langchain_community>=0.1.0",
    "httpx>=0.28.0",
    "asyncpg>=0.29.0",
    "psycopg[binary]>=3.1.0",
    "openai>=1.50.0",
    "tiktoken>=0.8.0",
    "unstructured>=0.15.0",
    "python-docx>=1.1.0",
    "pdfplumber>=0.11.0",
    "sentence-transformers>=3.0.0",
    "minio>=7.2.0",
    "cryptography>=42.0.0",
    "PyJWT>=2.9.0",
    "typer>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "mypy>=1.10.0",
    "ruff>=0.6.0",
    "pre-commit>=3.7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
    "--tb=short"
]

[tool.setuptools.packages.find]
where = ["src"]